Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_extracted_241_altergo.txt
[kernel] Parsing extracted_241_rte.c (with preprocessing)
[kernel] extracted_241_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing extracted_241.c (with preprocessing)
  3     /* Generated by Frama-C */
[kernel] Frama-C aborted: invalid user input.
